--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <a href="+234 8079 14 0547">+234 8079 14 0547</a>
-                        <a href="+234 8033 46 1089">+234 8033 46 1089</a>
+                        <a href="tel:+234 8079 14 0547">+234 8079 14 0547</a>
+                        <a href="tel:+234 8033 46 1089">+234 8033 46 1089</a>
                     </div>
                     <div class="col-lg-4 mr-auto text-center"> 
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
