--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">We've got what you need!</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Martos Home Finishing has everything you need to get your buildings completed and a clean and healthy Environment!</p>
+                        <p class="text-white-50 mb-4">Martos Home Finishing has everything you need to get your buildings completed and have a clean and healthy Environment!</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
                     </div>
                 </div>
